feat: stripe improvements
